@@ -1,4 +1,6 @@
 2006-03-27  CrazyPit  <crazypit13@gmail.com>	
+	* rails-scipts.el: generators/destroyers, shells and rails-create project added 
+	  from test branch
 	* rails-navigation.el: rails-goto-file-on-current-line and 
 	  rails-goto-file-from-file function with stuff added from test branch
 	* rails-lib.el: many helper functions from test branch added 
